--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ services:
 
 install:
   - pip install -r requirements.txt
-  - pip install coveralls
+  - psql -c 'CREATE DATABASE stack_over_flow_app;' - U postgres
+  - psql -c 'CREATE DATABASE test_db;' - U postgres
+  - psql -c "CREATE USER stackOverflow WITH PASSWORD 'hello$$123';" -U postgres
   
 script:
     - py.test --cov=API
