--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,13 @@ cache: pip3
 services:
   - postgresql
 
-install:
-  - pip install -r requirements.txt
+before_script:
   - psql -c 'CREATE DATABASE stack_over_flow_app;' - U postgres
   - psql -c 'CREATE DATABASE test_db;' - U postgres
   - psql -c "CREATE USER stackOverflow WITH PASSWORD 'hello$$123';" -U postgres
+
+install:
+  - pip install -r requirements.txt
   
 script:
     - py.test --cov=API
