--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,11 @@ services:
   - postgresql
 
 before_script:
-  - psql -c "CREATE DATABASE stack_over_flow_app;" -U postgres
-  - psql -c "CREATE DATABASE test_db;" -U postgres
+  - pip install -r requirements.txt
+  - psql -c 'CREATE DATABASE stack_over_flow_app;' -U postgres
+  - psql -c 'CREATE DATABASE test_db;' -U postgres
   - psql -c "CREATE USER stackOverflow WITH PASSWORD 'hello$$123';" -U postgres
 
-install:
-  - pip install -r requirements.txt
-  
 script:
     - py.test --cov=API
     - coverage report
