--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
   - "3.5"
+  
+sudo: true
 
 cache: pip3
 
@@ -11,7 +13,7 @@ before_script:
   - pip install -r requirements.txt
   - psql -c 'CREATE DATABASE stack_over_flow_app;' -U postgres
   - psql -c 'CREATE DATABASE test_db;' -U postgres
-  - psql -c "CREATE ROLE stackOverflow WITH PASSWORD 'hello$$123';" -U postgres
+  - sudo psql -c "CREATE ROLE stackOverflow WITH PASSWORD 'hello$$123';" -U postgres
 
 script:
     - py.test --cov=API
