--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
   - pip install -r requirements.txt
   - psql -c 'CREATE DATABASE stack_over_flow_app;' -U postgres
   - psql -c 'CREATE DATABASE test_db;' -U postgres
-  - sudo psql -c "CREATE ROLE stackOverflow WITH PASSWORD 'hello$$123';" -U postgres
+  - psql -c "CREATE ROLE stackOverflow WITH PASSWORD 'hello$$123';" -U postgres
 
 script:
     - py.test --cov=API
