--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,14 @@ cache: pip3
 
 services:
   - postgresql
+  
+install:
+  - pip install -r requirements.txt
 
 before_script:
-  - pip install -r requirements.txt
-  - psql -c 'CREATE DATABASE stack_over_flow_app;' -U postgres
-  - psql -c 'CREATE DATABASE test_db;' -U postgres
   - psql -c "CREATE ROLE stackOverflow WITH PASSWORD 'hello$$123';" -U postgres
+  - psql -c 'CREATE DATABASE stack_over_flow_app;' -U stackOverflow
+  - psql -c 'CREATE DATABASE test_db;' -U stackOverflow
 
 script:
     - py.test --cov=API
