--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ language: python
 python:
   - "3.5"
   
-sudo: true
-
 cache: pip3
 
 services:
@@ -13,7 +11,7 @@ install:
   - pip install -r requirements.txt
 
 before_script:
-  - psql -c "CREATE ROLE stackOverflow WITH PASSWORD 'hello$$123';" -U postgres
+  - psql -c "CREATE USER stackOverflow WITH PASSWORD 'hello$$123';" -U postgres
   - psql -c 'CREATE DATABASE stack_over_flow_app;' -U stackOverflow
   - psql -c 'CREATE DATABASE test_db;' -U stackOverflow
 
