--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ install:
 
 before_script:
   - psql -c "CREATE USER stackOverflow WITH SUPERUSER PASSWORD 'hello$$123';" -U postgres
-  - psql -c 'CREATE DATABASE stack_over_flow_app;' -U stackOverflow
-  - psql -c 'CREATE DATABASE test_db;' -U stackOverflow
+  - psql -c 'CREATE DATABASE stack_over_flow_app;' -U postgres
+  - psql -c 'CREATE DATABASE test_db;' -U postgres
 
 script:
     - py.test --cov=API
