Add comments end points (#4)
* Merge all changes done so far... (#3)

* add some database initialization files

* connect to postgres db and add some database handling files with some code

* add the register User resource and adding code in the respective db handlers

* add questions and answers endpoints. Solved bugs with connecting and adding data to the db. Added login and signup endpoints

* add update answer and accept answer endpoints. Move to write tests for the endpoints...

* finish required endpoints with their tests. Added configuration for travis and coveralls

* correct error in travis file i.e. remove db commands from install into before_script

* correct error db commands i.e. change from '- U' to '-U'

* edit travis before script commands

* edit travis file

* Update .travis.yml

* edit db file

* Update README.md

* add heroku congurations

* Update db_handler.py

* Add tests for user.

* update tests to reflect changes made in code

* Update README.md

* Add some functionality for get user questions and get user answers. 

* Edit README to reflect the implemented endpoints

* Update README.md

* edit readme file and index.html to reflect endpoints

* Add some functionality for get user questions and get user answers. Edit README to reflect the implemented endpoints

* edit readme file and index.html to reflect endpoints

* add doc strings in app.py file

* Update README.md

* refactor database table columns to be more descriptive

* Refactor database handling classes and document them. 

* document model classes

* add check to create database if it doesn't exist before the first request

* Add post comment to question and post comment to answer

* Add get Comments endpoint

* Add get comments by question Id and get comments by answer id

* Add developed endpoints to README

* Correct typo in README

--- a/.coveragerc
+++ b/.coveragerc
@@ -5,5 +5,9 @@ omit=
    ./UI/*
    ./API/tests/*
    */API/models/*
-   ./API*\__init__.py
+   */API/database/*
+   */__init__.py
+   ./API/__init__.py
+   ./API/config.py
+   ./API/resources/comment.py 
    
