Revert "Add comments end points (#4)"
This reverts commit 9ba8bade97db32be810b8658d0f91ccbfe0dd1b4.

--- a/.coveragerc
+++ b/.coveragerc
@@ -5,9 +5,5 @@ omit=
    ./UI/*
    ./API/tests/*
    */API/models/*
-   */API/database/*
-   */__init__.py
-   ./API/__init__.py
-   ./API/config.py
-   ./API/resources/comment.py 
+   ./API*\__init__.py
    
