--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,13 @@
 language: python
 python:
   - "3.5"
-  
+
 cache: pip3
 
-services:
-  - postgresql
-  
 install:
   - pip install -r requirements.txt
-
-before_script:
-  - psql -c "CREATE USER stackOverflow WITH SUPERUSER PASSWORD 'hello$$123';" -U postgres
-  - psql -c 'CREATE DATABASE stack_over_flow_app;' -U postgres
-  - psql -c 'CREATE DATABASE test_db;' -U postgres
-
+  - pip install coveralls
+  
 script:
     - py.test --cov=API
     - coverage report
